Changes for 1.8.2

 - [ZBX-2179] fixed errors connected with Triggers Info screen element (Vedmak)
 - [ZBX-2184] added maintenance info to dashboard latest issues (Aly)
 - [ZBX-1772] changed frontend timezone to match PHP server (Aly)
 - [DEV-455] added configurable filter to "Status of triggers" screen element (Aly)
 - [DEV-454] implemented screen export (Aly)
 - [ZBX-2144] fixed internal and aggregate checks for hosts monitored by a proxy (asaveljevs)
 - [ZBX-2052] fixed sending of regexps to agents (asaveljevs,Sasha)
 - [ZBX-2129] fixed links from monitoring to configuration when All nodes are selected (Vedmak)
 - [ZBX-2146] fixed error when try to view slideshow without slides (Vedmak)
 - [ZBX-2161] added permission checks for map link triggers (Vedmak)
 - [ZBX-2169] fixed adding dependencies to triggers on mass update (Aly)
 - [ZBX-2157] fixed script permissions (Vedmak)
 - [ZBX-2135] fixed screens ignore nodes "All" option in selection dropdown (Vedmak)
 - [ZBX-1954] fixed config file errors if special chars are used in db password (Vedmak)
 - [ZBX-2075] admins now have access only to users they share usergroup with [action operations] (Vedmak)
 - [ZBX-2147] fixed permission check for item configuration (Vedmak)
 - [ZBX-2158] fixed map image deletion (Vedmak)
 - [ZBX-2155] ipv6 addresses are now case insensitive (Vedmak)
 - [ZBX-2005] fixed graph being deleted when any of its items are deleted (Vedmak)
 - [ZBX-2163] fixed possibility to acknowledge events regradless of GUI events settings (Aly)
 - [ZBX-2160] fixed permission issue in reports when accessing by user or admin (Aly)
 - [ZBX-1346] explicitly note that hostname in configuration files is case sensitive (Richlv)
 - [ZBX-2006] added explicit dependency on "lber" library to gain better portability on upcoming Fedora "ld" changes. Thanks to Dan Horak. (Dmitry)
 - [ZBX-1575] added UnsafeUserParameters configuration option for agents (asaveljevs)